Avoid ugly gapless flaw after title on non-index pages

--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ html {
 h1 {
 	font-size: 3rem;
 	font-weight: 400;
+	margin-bottom: 1em;
 }
 
 h2 {
